--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ p {
   height: 240px;
   border-radius: 8px;
 }
-.order {
+.order-btn {
   display: flex;
   width: 160px;
   max-width: 160px;
@@ -131,6 +131,27 @@ p {
   cursor: pointer;
 }
 
+.order-btn-click {
+  display: flex;
+  width: 160px;
+  max-width: 160px;
+  padding: 12px;
+  justify-content: space-between;
+  align-items: center;
+
+  border-radius: 999px;
+  background: #c73b0f;
+
+  color: #fff;
+
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+}
+.order-btn-click svg {
+  cursor: pointer;
+}
+
 .product-info {
   display: flex;
   flex-direction: column;
@@ -150,18 +171,22 @@ p {
   max-width: 384px;
   width: 100%;
   height: 1185px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border-radius: var(--spacing-150, 12px);
 }
 .basket {
   padding: 24px;
   width: 100%;
   width: 384px;
-  height: 300px;
+  /* height: 300px; */
+
+  background-color: #fff;
 }
 h2 {
   padding-bottom: 24px;
 }
-.basket-info-empty {
+
+.basket-empty {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,6 +194,142 @@ h2 {
   padding: 16px;
   gap: 16px;
 }
-.basket-info p {
+
+.basket-empty > p {
   font-weight: 600;
+}
+
+.basket-info-order {
+  display: block;
+}
+.basket-info-empty {
+  display: none;
+}
+
+.basket-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  margin-right: -5px;
+}
+
+.order-details {
+  display: flex;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.order-choose {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+.order-description {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+}
+.order-description > p {
+  font-weight: 600;
+  color: #260f08;
+}
+.order-details {
+  display: flex;
+  gap: 8px;
+}
+.product-quantity {
+  color: #c73b0f;
+  font-weight: 600;
+}
+.product-total {
+  font-weight: 600;
+}
+
+hr {
+  background: #f5eeec;
+  width: 336px;
+  height: 1px;
+  align-self: stretch;
+
+  padding: 0;
+  margin: 0;
+}
+
+.order-total {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  gap: 24px;
+}
+
+.total-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+.total-price > p {
+  color: #260f08;
+}
+
+.total-price > span {
+  color: #260f08;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.order-delivery {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: #fcf8f6;
+}
+
+.order-delivery > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+}
+
+.order-delivery p > span {
+  color: #260f08;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.confirm-btn {
+  width: 336px;
+  display: flex;
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+
+  border-radius: 999px;
+  background: #c73b0f;
+  border: none;
+  color: #fff;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+
+  cursor: pointer;
 }
